// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmployerBenefitList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Benefit 1"
    reviewRowLevel="4"
    type="Accrued paid leave"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Benefit 2"
    reviewRowLevel="4"
    type="Short-term disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Benefit 3"
    reviewRowLevel="4"
    type="Permanent disability insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Benefit 4"
    reviewRowLevel="4"
    type="Family or medical leave insurance"
  />,
]
`;

exports[`EmployerBenefitList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Benefit 1"
  reviewRowLevel="4"
  type={null}
/>
`;

exports[`Final Review Page when all data is present renders Review page with final review page content and only edit links for Part 2/3 sections 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title
    hidden={true}
  >
    Check your answers before submitting your application.
  </Title>
  <Heading
    className="margin-top-0"
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 1
    </HeadingPrefix>
    Review: Tell us about yourself and your leave
  </Heading>
  <Lead>
    <Trans
      i18nKey="pages.claimsReview.partDescription"
      tOptions={
        Object {
          "context": "1",
        }
      }
      values={
        Object {
          "absence_id": "NTN-111-ABS-01",
        }
      }
    />
  </Lead>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Your identity
  </ReviewHeading>
  <ReviewRow
    label="Name"
    level="3"
  >
    Jane  Doe
  </ReviewRow>
  <ReviewRow
    label="Residential address"
    level="3"
  >
    1234 My St., Boston, MA 00000
  </ReviewRow>
  <ReviewRow
    label="Driver's License Number"
    level="3"
  >
    *********
  </ReviewRow>
  <ReviewRow
    label="Social Security Number or ITIN"
    level="3"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
    level="3"
  >
    **/**/****
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="3"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Are you pregnant or have you recently given birth?"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="3"
  >
    1/1/2021 – 6/1/2021
  </ReviewRow>
  <ReviewRow
    label="Leave duration type"
    level="3"
  >
    Continuous leave
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employment status"
    level="3"
  >
    Currently employed
  </ReviewRow>
  <ReviewRow
    label="Employer's FEIN"
    level="3"
  >
    12-3456789
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
    level="3"
  >
    Notified employer on 1/1/2021
  </ReviewRow>
  <ReviewHeading
    editText="Edit"
    level="2"
  >
    Other leave, income, and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
    level="3"
  >
    No
  </ReviewRow>
  <ReviewRow
    editText="Edit"
    label="Previous paid or unpaid leave?"
    level="3"
  >
    No
  </ReviewRow>
  <Heading
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 2
    </HeadingPrefix>
    Review: Your payment information
  </Heading>
  <ReviewHeading
    editHref="/claims/payment-method?claim_id=mock_application_id"
    editText="Edit"
    level="2"
  >
    Payment information
  </ReviewHeading>
  <ReviewRow
    label="Payment method"
    level="3"
  >
    Direct deposit
  </ReviewRow>
  <ReviewRow
    label="Account type"
    level="3"
  >
    Checking
  </ReviewRow>
  <ReviewRow
    label="Payment details"
    level="3"
  >
    091000022
  </ReviewRow>
  <Button
    className="margin-top-3"
    loading={false}
    onClick={[Function]}
    type="button"
  >
    Submit application
  </Button>
</div>
`;

exports[`Final Review Page when all data is present renders Review page with final review page content and only edit links for Part 2/3 sections 2`] = `
Array [
  "If you need to make edits to Part 1, you’ll need to contact our call center at XXX‑XXX‑XXXX. Your application ID is ",
  <strong
    key="strong-1"
  >
    NTN-111-ABS-01
  </strong>,
]
`;

exports[`OtherIncomeList when all data are present renders all data fields 1`] = `
Array [
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="0"
    label="Income 1"
    reviewRowLevel="4"
    type="Workers Compensation"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="1"
    label="Income 2"
    reviewRowLevel="4"
    type="Unemployment Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="2"
    label="Income 3"
    reviewRowLevel="4"
    type="Social Security Disability Insurance"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="3"
    label="Income 4"
    reviewRowLevel="4"
    type="Disability benefits under a governmental retirement plan"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="4"
    label="Income 5"
    reviewRowLevel="4"
    type="Jones Act benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="5"
    label="Income 6"
    reviewRowLevel="4"
    type="Railroad Retirement benefits"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="6"
    label="Income 7"
    reviewRowLevel="4"
    type="Earnings from another employer"
  />,
  <OtherLeaveEntry
    amount="$250 every month"
    dates="8/12/2021 – 12/30/2021"
    key="7"
    label="Income 8"
    reviewRowLevel="4"
    type="Earnings from self-employment"
  />,
]
`;

exports[`OtherIncomeList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  amount={null}
  dates=""
  key="0"
  label="Income 1"
  reviewRowLevel="4"
  type={null}
/>
`;

exports[`OtherLeaveEntry when all data are present renders all data fields 1`] = `
<ReviewRow
  label="Benefit 1"
  level="4"
>
  Medical or family leave
  <br />
  07-22-2020 - 09-22-2020
  <br />
  $250 per month
</ReviewRow>
`;

exports[`OtherLeaveEntry when data are missing doesn't render missing data 1`] = `
<ReviewRow
  label="Benefit 1"
  level="4"
/>
`;

exports[`Part 1 Review Page when all data is present renders Review page with Part 1 content and edit links 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title
    hidden={true}
  >
    Check your answers before submitting your application.
  </Title>
  <Heading
    className="margin-top-0"
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 1
    </HeadingPrefix>
    Review and confirm: Tell us about yourself and your leave
  </Heading>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Your identity
  </ReviewHeading>
  <ReviewRow
    label="Name"
    level="4"
  >
    Jane  Doe
  </ReviewRow>
  <ReviewRow
    label="Residential address"
    level="4"
  >
    1234 My St., Boston, MA 00000
  </ReviewRow>
  <ReviewRow
    label="Driver's License Number"
    level="4"
  >
    *********
  </ReviewRow>
  <ReviewRow
    label="Social Security Number or ITIN"
    level="4"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
    level="4"
  >
    **/**/****
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="4"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Are you pregnant or have you recently given birth?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="4"
  >
    1/1/2021 – 6/1/2021
  </ReviewRow>
  <ReviewRow
    label="Leave duration type"
    level="4"
  >
    Continuous leave
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Employment information
  </ReviewHeading>
  <ReviewRow
    label="Employment status"
    level="4"
  >
    Currently employed
  </ReviewRow>
  <ReviewRow
    label="Employer's FEIN"
    level="4"
  >
    12-3456789
  </ReviewRow>
  <ReviewRow
    label="Notified employer"
    level="4"
  >
    Notified employer on 1/1/2021
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/employer-benefits?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Other leave, income, and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    editText="Edit"
    label="Previous paid or unpaid leave?"
    level="4"
  >
    No
  </ReviewRow>
  <div
    className="margin-top-6 margin-bottom-2"
  >
    <p>
      Once you review and confirm Part 1, your in-progress application will be viewable by our call center staff. If you need to make edits to Part 1, you’ll need to contact our call center at XXX‑XXX‑XXXX.
    </p>
    <p>
      We’ll also notify your employer that you’ve started an application for paid family and medical leave.
    </p>
    <p>
      Next, you’ll be able to work on Parts 2 and 3, and submit your application.
    </p>
  </div>
  <Button
    className="margin-top-3"
    loading={false}
    onClick={[Function]}
    type="button"
  >
    Submit Part 1
  </Button>
</div>
`;

exports[`Part 1 Review Page when data is empty does not render strings like 'null' or 'undefined' 1`] = `
<div
  className="measure-6"
>
  <BackButton />
  <Title
    hidden={true}
  >
    Check your answers before submitting your application.
  </Title>
  <Heading
    className="margin-top-0"
    level="2"
    size="1"
  >
    <HeadingPrefix>
      Part 1
    </HeadingPrefix>
    Review and confirm: Tell us about yourself and your leave
  </Heading>
  <ReviewHeading
    editHref="/claims/name?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Your identity
  </ReviewHeading>
  <ReviewRow
    label="Name"
    level="4"
  >
      
  </ReviewRow>
  <ReviewRow
    label="Residential address"
    level="4"
  />
  <ReviewRow
    label="Social Security Number or ITIN"
    level="4"
  >
    ***-**-****
  </ReviewRow>
  <ReviewRow
    label="Date of birth"
    level="4"
  >
    **/**/****
  </ReviewRow>
  <ReviewHeading
    editHref="/claims/leave-reason?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Leave details
  </ReviewHeading>
  <ReviewRow
    label="Leave type"
    level="4"
  >
    Medical leave
  </ReviewRow>
  <ReviewRow
    label="Are you pregnant or have you recently given birth?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Leave duration"
    level="4"
  />
  <ReviewRow
    label="Leave duration type"
    level="4"
  />
  <ReviewHeading
    editHref="/claims/employment-status?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Employment information
  </ReviewHeading>
  <ReviewHeading
    editHref="/claims/employer-benefits?claim_id=mock_application_id"
    editText="Edit"
    level="3"
  >
    Other leave, income, and benefits
  </ReviewHeading>
  <ReviewRow
    label="Employer-sponsored benefits?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    label="Other sources of income?"
    level="4"
  >
    No
  </ReviewRow>
  <ReviewRow
    editText="Edit"
    label="Previous paid or unpaid leave?"
    level="4"
  >
    No
  </ReviewRow>
  <div
    className="margin-top-6 margin-bottom-2"
  >
    <p>
      Once you review and confirm Part 1, your in-progress application will be viewable by our call center staff. If you need to make edits to Part 1, you’ll need to contact our call center at XXX‑XXX‑XXXX.
    </p>
    <p>
      We’ll also notify your employer that you’ve started an application for paid family and medical leave.
    </p>
    <p>
      Next, you’ll be able to work on Parts 2 and 3, and submit your application.
    </p>
  </div>
  <Button
    className="margin-top-3"
    loading={false}
    onClick={[Function]}
    type="button"
  >
    Submit Part 1
  </Button>
</div>
`;

exports[`PreviousLeaveList when all data are present renders all data fields 1`] = `
<OtherLeaveEntry
  dates="8/12/2021 – 12/30/2021"
  key="0"
  label="Previous leave 1"
  reviewRowLevel="4"
/>
`;

exports[`PreviousLeaveList when data are missing doesn't render missing data 1`] = `
<OtherLeaveEntry
  dates=""
  key="0"
  label="Previous leave 1"
  reviewRowLevel="4"
/>
`;
